# RolePlayingLife

./: CMakeLists.txt  Main.qml  main.cpp  papaj.qrc
